// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Encapsulation Header Building Utility Builds Correct Encapsulation Buffer 1`] = `
Object {
  "data": Array [
    101,
    0,
    4,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`Encapsulation Header Parsing Utility Builds Correct Encapsulation Buffer 1`] = `
Object {
  "command": "SendRRData",
  "commandCode": 111,
  "data": Object {
    "data": Array [
      1,
      0,
      0,
      0,
    ],
    "type": "Buffer",
  },
  "length": 4,
  "options": 0,
  "session": 98705,
  "status": "SUCCESS",
  "statusCode": 0,
}
`;

exports[`Encapsulation Test Common Packet Format Helper Functions Build Helper Function Generates Correct Output 1`] = `
Object {
  "data": Array [
    2,
    0,
    0,
    0,
    0,
    0,
    178,
    0,
    11,
    0,
    104,
    101,
    108,
    108,
    111,
    32,
    119,
    111,
    114,
    108,
    100,
  ],
  "type": "Buffer",
}
`;

exports[`Encapsulation Test Common Packet Format Helper Functions Build Helper Function Generates Correct Output 2`] = `
Object {
  "data": Array [
    3,
    0,
    0,
    0,
    0,
    0,
    178,
    0,
    11,
    0,
    104,
    101,
    108,
    108,
    111,
    32,
    119,
    111,
    114,
    108,
    100,
    161,
    0,
    14,
    0,
    84,
    104,
    105,
    115,
    32,
    105,
    115,
    32,
    97,
    32,
    116,
    101,
    115,
    116,
  ],
  "type": "Buffer",
}
`;

exports[`Encapsulation Test Common Packet Format Helper Functions Parse Helper Function Generates Correct Output 1`] = `
Array [
  Object {
    "TypeID": 0,
    "data": Object {
      "data": Array [],
      "type": "Buffer",
    },
  },
  Object {
    "TypeID": 178,
    "data": Object {
      "data": Array [
        104,
        101,
        108,
        108,
        111,
        32,
        119,
        111,
        114,
        108,
        100,
      ],
      "type": "Buffer",
    },
  },
]
`;

exports[`Encapsulation Test Common Packet Format Helper Functions Parse Helper Function Generates Correct Output 2`] = `
Array [
  Object {
    "TypeID": 0,
    "data": Object {
      "data": Array [],
      "type": "Buffer",
    },
  },
  Object {
    "TypeID": 178,
    "data": Object {
      "data": Array [
        104,
        101,
        108,
        108,
        111,
        32,
        119,
        111,
        114,
        108,
        100,
      ],
      "type": "Buffer",
    },
  },
  Object {
    "TypeID": 161,
    "data": Object {
      "data": Array [
        84,
        104,
        105,
        115,
        32,
        105,
        115,
        32,
        97,
        32,
        116,
        101,
        115,
        116,
      ],
      "type": "Buffer",
    },
  },
]
`;

exports[`Encapsulation Test Encapsulation Generator Functions ListIdentity Returns Correct Encapsulation String 1`] = `
Object {
  "data": Array [
    99,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`Encapsulation Test Encapsulation Generator Functions ListServices Returns Correct Encapsulation String 1`] = `
Object {
  "data": Array [
    4,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`Encapsulation Test Encapsulation Generator Functions Register Session Returns Correct Encapsulation String 1`] = `
Object {
  "data": Array [
    101,
    0,
    4,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`Encapsulation Test Encapsulation Generator Functions SendRRData Returns Correct Encapsulation String 1`] = `
Object {
  "data": Array [
    111,
    0,
    27,
    0,
    145,
    129,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    10,
    0,
    2,
    0,
    0,
    0,
    0,
    0,
    178,
    0,
    11,
    0,
    104,
    101,
    108,
    108,
    111,
    32,
    119,
    111,
    114,
    108,
    100,
  ],
  "type": "Buffer",
}
`;

exports[`Encapsulation Test Encapsulation Generator Functions SendUnitData Returns Correct Encapsulation String 1`] = `
Object {
  "data": Array [
    112,
    0,
    35,
    0,
    145,
    129,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    2,
    0,
    2,
    128,
    8,
    0,
    145,
    125,
    0,
    0,
    200,
    1,
    0,
    0,
    177,
    0,
    11,
    0,
    104,
    101,
    108,
    108,
    111,
    32,
    119,
    111,
    114,
    108,
    100,
  ],
  "type": "Buffer",
}
`;

exports[`Encapsulation Test Encapsulation Generator Functions Unregister Session Returns Correct Encapsulation String 1`] = `
Object {
  "data": Array [
    102,
    0,
    0,
    0,
    145,
    129,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
  ],
  "type": "Buffer",
}
`;
